kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivemind-app
  labels:
    app: hivemind-app
  namespace: hivemind
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hivemind-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hivemind-app
    spec:
      containers:
      - image: public.ecr.aws/a7r4i9q7/greeter:v1.12
        imagePullPolicy: Always
        name: hivemind-app
        ports:
        - containerPort: 80
          protocol: TCP
